--- a/fixme.dtx
+++ b/fixme.dtx
@@ -668,9 +668,10 @@
 % \texttt{fixme} default user is special in that it is the only registered
 % user to honor global \texttt{author} options (provided in the call to
 % \cs{usepackage} or \cs{fxsetup}). The intended use of this is that the
-% \emph{main} author of the document uses the \texttt{fx*} interface, possibly
-% specifying a \meta{tag} different from the default \fixme logo, and all
-% other authors are registered via \cs{FXRegisterAuthor}.
+% \emph{main} author of the document uses the \texttt{fx*} interface
+% (preferably with a personal \texttt{author} setting, different from the
+% \fixme logo), and all other authors are registered via
+% \cs{FXRegisterAuthor}.
 %
 % \section{Customizing \fixme}
 % \subsection{Customizing the \fixme notes layout}
