--- a/fixme.dtx
+++ b/fixme.dtx
@@ -782,14 +782,18 @@
 %
 % \section{History}
 % \begin{itemize}
-% \item[v4.0] New feature: targeted notes and environments (highlighting a
-%   portion of text), suggested by Mark Edgington.\\
-%   New feature: floating notes (not specific to any portion of text),
+% \item[v4.0] Support for collaborative annotations, suggested by Michael
+%   Kubovy.\\
+%   Support for ``targeted'' notes and environments (highlighting a portion of
+%   text), suggested by Mark Edgington.\\
+%   Support for ``floating notes'' (not specific to any portion of text),
 %   suggested by Rasmus Villemoes.\\
-%   New feature: alternate layout autoswitch for inner mode, suggested by Will
-%   Robertson.\\
-%   New feature: key/value argument syntax in the whole user interface.\\
-%   New command: \cs{fxsetup}.\\
+%   Support for alternate layout autoswitch in \TeX's inner mode, suggested by
+%   Will Robertson.\\
+%   Support for automatic language tracking in multilingual documents.\\
+%   Support for \texttt{key=value} argument syntax in the whole user
+%   interface.\\
+%   New command \cs{fxsetup}.\\
 %   Homogenize the log and console messages.\\
 %   Heavy internals refactoring.
 % \item[v3.4] \cs{fixme}, \cs{fxerror}, \cs{fxwarning} and \cs{fxnote} are now
