--- a/NEWS
+++ b/NEWS
@@ -20,14 +20,17 @@ FiXme consists of the files listed in the file `README'.
 
 * Version 4.0
 =============
-** New feature: targeted notes and environments
+** Support for collaborative annotations
+suggested by Michael Kubovy
+** Support for "targeted" notes and environments
 (highlighting a portion of text), suggested by Mark Edgington.
-** New feature: floating notes
+** Support for "floating" notes
 (not specific to any portion of text), suggested by Rasmus Villemoes.
-** New feature: alternate layout autoswitch for inner mode
+** Support for alternate layout autoswitch in TeX's inner mode
 suggested by Will Robertson.
-** New feature: key/value argument syntax in the whole user interface
-** New command: \fxsetup
+** Support for automatic language tracking in multilingual documents
+** Support for key=value argument syntax in the whole user interface
+** New command \fxsetup
 ** Homogenize log and console messages
 ** Heavy internals refactoring
 
