More doc about collaborative mode

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -692,6 +692,11 @@
 % options are understood globally by \cs{usepackage} or \cs{fxsetup}, and also
 % locally by the note insertion commands or environments.
 %
+% When collaborative mode is active, \fixme adjusts the list of fixmes layout
+% to display the authors tags as well. Additionally, \fixme notes are indexed
+% as before, but additional index entries, sorted by author, and generated as
+% well.
+%
 % \section{Customizing \fixme}
 % \subsection{Customizing the \fixme notes layout}
 % \subsubsection{Commands}
