Reformat \ProvidesPackage line

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -855,9 +855,9 @@
 % \section{Implementation}
 % \subsection{Preamble}
 %    \begin{macrocode}
+%<*fixme>
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{fixme}[2009/09/08 v4.0
-			Insert fixme notes in your documents]
+\ProvidesPackage{fixme}[2009/09/08 v4.0 Insert fixme notes in your documents]
 
 %    \end{macrocode}
 % Some required packages:
