Initial support for theme files installation

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2405,8 +2405,17 @@
       Number of fatal errors: \thefxfatalcount,\MessageBreak%
       Total: \thefixmecount\@gobble}%
   \fi}
+%</fixme>
 %    \end{macrocode}
 %
+% \appendix
+% \section{Additional Layouts}
+%
+% \section{Additional themes}
+%    \begin{macrocode}
+%<*fxthemesignature>
+%</fxthemesignature>
+%    \end{macrocode}
 % ^^A \PrintChanges
 % \PrintIndex
 % \Finale
