Silent FiXme when processing the dtx file

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -37,7 +37,7 @@
 % \OnlyDescription
 \CodelineIndex
 % \RecordChanges
-\usepackage{fixme} %% for \GetFileInfo, and the logo
+\usepackage[silent]{fixme} %% for \GetFileInfo, and the logo
 \begin{document}
 \DocInput{fixme.dtx}
 \end{document}
