New command \ie

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -78,6 +78,7 @@
 % \newcommand\sectionref[1]{\ref{#1} on page \pageref{#1}}
 %
 % \newcommand\etc{\textit{etc.}\xspace}
+% \newcommand\ie{\textit{i.e.}\xspace}
 % \newcommand\komascript{\textsc{Koma}-Script\xspace}
 % \newcommand\auctex{AUC-\TeX\xspace}
 %
